--- a/RAdopt.vcxproj
+++ b/RAdopt.vcxproj
@@ -162,6 +162,8 @@
     <ClInclude Include="DX11TypeConverter.h" />
     <ClInclude Include="includes\GLM.h" />
     <ClInclude Include="includes\GLMUtils.h" />
+    <ClInclude Include="includes\RCanvas.h" />
+    <ClInclude Include="includes\RFonts.h" />
     <ClInclude Include="includes\RSystems.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="stb_image_bindings.h" />
@@ -171,6 +173,9 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="GLMUtils.cpp" />
+    <ClCompile Include="RCanvas.cpp" />
+    <ClCompile Include="RFonts.cpp" />
     <ClCompile Include="RSystems.cpp" />
     <ClCompile Include="stb_image_bindings.cpp" />
     <ClCompile Include="pch.cpp">
