--- a/RAdopt.vcxproj
+++ b/RAdopt.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="DX11TypeConverter.h" />
     <ClInclude Include="includes\GLM.h" />
     <ClInclude Include="includes\GLMUtils.h" />
+    <ClInclude Include="includes\RAtlas.h" />
     <ClInclude Include="includes\RCanvas.h" />
     <ClInclude Include="includes\RFonts.h" />
     <ClInclude Include="includes\RSystems.h" />
@@ -174,6 +175,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GLMUtils.cpp" />
+    <ClCompile Include="RAtlas.cpp" />
     <ClCompile Include="RCanvas.cpp" />
     <ClCompile Include="RFonts.cpp" />
     <ClCompile Include="RSystems.cpp" />
