--- a/RAdopt.vcxproj.filters
+++ b/RAdopt.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="includes\RCanvas.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="includes\RAtlas.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RAdopt.cpp">
@@ -78,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RCanvas.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RAtlas.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
