--- a/RAdopt.vcxproj.filters
+++ b/RAdopt.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="includes\RAtlas.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="includes\RWnd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RAdopt.cpp">
@@ -84,6 +87,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RAtlas.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RWnd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
