--- a/RAdopt.vcxproj.filters
+++ b/RAdopt.vcxproj.filters
@@ -103,7 +103,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="shaders\shaders.rc">
+    <ResourceCompile Include="..\..\RAdopt\shaders\RAdopt_shaders.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
